<resources>
    <string name="app_name">Shoppy</string>
    <string name="title_settings">Settings</string>
    <string name="title_grocery_list">Grocery List</string>
    <string name="title_storage">Storage</string>
    <string name="add_item_to_grocery_list">Add item</string>
    <string name="add_item_to_storage">Add item</string>
    <string name="search_hint">Search in grocery list</string>
    <string name="add_article_to_grocery_list">Add article to grocery list</string>
    <string name="add_article_to_storage">Add item to your storage</string>
    <string name="item_name">Item name</string>
    <string name="item_category">Item category</string>
    <string name="add">Add</string>
    <string name="item_successfully_deleted">has been deleted</string>
    <string name="item_successfully_added">has been added</string>
    <string name="item_successfully_moved_to_storage">has been moved to storage</string>
    <string name="item_successfully_moved_to_grocery_list">has been moved to your grocery list</string>
    <string name="undo">UNDO</string>

    <string name="fruits">fruits</string>
    <string name="vegetables">vegetables</string>
    <string name="drinks">drinks</string>
    <string name="spices">spices</string>
    <string name="condiments">condiments</string>
    <string name="others">others</string>
    <string name="dried">dried</string>
    <string name="cereals">cereals</string>
    <string name="dairy">snacks</string>
    <string name="meat">meat</string>
    <string name="fish">fish</string>
    <string name="frozen">frozen</string>
    <string name="can">can</string>
    <string name="toiletries">toiletries</string>
    <string name="household">household</string>
    <string name="snacks">snacks</string>
    <string name="legume">legume</string>
    <string name="check_button_content_description">Item check button</string>
    <string name="move_to_storage_button_content_description">Move item to storage button</string>
    <string name="empty_state_picture">empty state picture</string>
    <string name="no_item_in_storage">Your storage is empty</string>
    <string name="no_item_in_grocery_list">Your grocery list is empty</string>
    <string name="plus_button_content_description">Add one button</string>
    <string name="remove_button_content_description">Remove one button</string>
    <string name="move_item_to_storage">Choose the quantity</string>
    <string name="there_are_already">There are already</string>
    <string name="in_stock">in your storage</string>
    <string name="no_item_in_stock">You have none in your storage</string>
    <string name="no_item_name_error">Enter an item name</string>
    <string name="no_category_error">Choose a category</string>
    <string name="no_internet">You are not connected to internet. You cannot edit items.</string>
    <string name="back_online">You are online</string>
    <string name="edit_username">Edit your username</string>
    <string name="username_info">Each username correspond to a different grocery list, if you with to share your grocery list with another Shoppy user you need to enter the same username</string>
    <string name="username">Username</string>
    <string name="change_username">Change username</string>
    <string name="grocery_overview">Grocery list overview</string>
    <string name="storage_overview">Storage overview</string>
    <string name="database_status">Online status</string>
    <string name="there_are">There are</string>
    <string name="there_is">There is</string>
    <string name="item_in_grocery_list">item in your grocery list</string>
    <string name="items_in_grocery_list">items in your grocery list</string>
    <string name="item_in_storage">item in your storage</string>
    <string name="items_in_storage">items in your storage</string>
    <string name="remote_db_is_unavailable">Remote database is not available. You cannot edit items.</string>
    <string name="title">Shoppy</string>
</resources>
