<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:drawableStart="@drawable/ic_baseline_format_list_bulleted_24"
        android:drawablePadding="@dimen/small_margin"
        android:drawableTint="@color/md_theme_primary"
        android:text="@string/add_article_to_grocery_list"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_name_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:hint="@string/item_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:startIconDrawable="@drawable/ic_baseline_create_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_category_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:hint="@string/item_category"
        android:inputType="none"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_name_input_layout"
        app:startIconDrawable="@drawable/ic_baseline_category_24">

        <AutoCompleteTextView
            android:id="@+id/item_category_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_category"
            android:inputType="none"
            android:labelFor="@id/item_category_input_layout" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/validate_button"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:foregroundTint="@color/md_theme_primary"
        android:gravity="center_horizontal"
        android:text="@string/add"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:backgroundTint="@color/md_theme_primaryContainer"
        app:icon="@drawable/ic_baseline_add_shopping_cart_24"
        app:iconSize="24dp"
        app:iconTint="@color/md_theme_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_category_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>