<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:drawableStart="@drawable/ic_baseline_swap_horiz_24"
        android:drawablePadding="@dimen/small_margin"
        android:drawableTint="@color/md_theme_primary"
        android:text="@string/move_item_to_storage"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/available_quantity_in_stock_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:drawableStart="@drawable/ic_baseline_kitchen_24"
        android:drawablePadding="@dimen/small_margin"
        android:drawableTint="@color/md_theme_primary"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <LinearLayout
        android:id="@+id/quantity_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/available_quantity_in_stock_text">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tiny_margin"
            android:backgroundTint="@color/md_theme_onSecondary"
            android:contentDescription="@string/remove_button_content_description"
            android:hapticFeedbackEnabled="true"
            app:srcCompat="@drawable/ic_baseline_remove_24"
            app:tint="@color/md_theme_onSecondaryContainer" />

        <TextView
            android:id="@+id/stock_quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            android:text="0"
            android:textAppearance="?attr/textAppearanceDisplayMedium"
            tools:ignore="HardcodedText" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tiny_margin"
            android:backgroundTint="@color/md_theme_tertiaryContainer"
            android:contentDescription="@string/plus_button_content_description"
            android:hapticFeedbackEnabled="true"
            app:srcCompat="@drawable/ic_baseline_add_24"
            app:tint="@color/md_theme_tertiary" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/validate_button"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:foregroundTint="@color/md_theme_primary"
        android:gravity="center_horizontal"
        android:text="@string/add"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:backgroundTint="@color/md_theme_primaryContainer"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconSize="24dp"
        app:iconTint="@color/md_theme_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>