<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.StorageFragment">

    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/big_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:background="@drawable/search_view_background"
        android:focusable="false"
        android:goIcon="@drawable/ic_baseline_add_24"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:queryHint="@string/search_hint"
        android:submitBackground="@drawable/search_view_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chip_recyclerview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin"
        android:layout_marginTop="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/tiny_margin"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/item_recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        tools:listitem="@layout/category_chip_adapter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_recyclerview"
        tools:listitem="@layout/grocery_item_adapter" />

    <ImageView
        android:id="@+id/empty_state_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/empty_state_picture"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_empty_storage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/empty_state_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_margin"
        android:text="@string/no_item_in_storage"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/empty_state_image" />

</androidx.constraintlayout.widget.ConstraintLayout>
