<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/add_article_to_shopping_list"
            android:drawableStart="@drawable/ic_baseline_format_list_bulleted_24"
            android:drawableTint="@color/md_theme_primary"
            android:drawablePadding="@dimen/small_margin"
            android:textAppearance="?attr/textAppearanceTitleLarge"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/big_margin"
            app:startIconDrawable="@drawable/ic_baseline_create_24"
            android:hint="@string/item_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textMultiLine|textCapWords"
            android:maxLength="30"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_category_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/item_name_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/big_margin"
            android:hint="@string/item_category"
            app:startIconDrawable="@drawable/ic_baseline_category_24"
            android:inputType="none"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/item_category_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/validate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/item_category_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/big_margin"
            android:gravity="center_horizontal"
            app:backgroundTint="@color/md_theme_primaryContainer"
            android:foregroundTint="@color/md_theme_primary"
            android:text="@string/add"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:icon="@drawable/ic_baseline_add_shopping_cart_24"
            app:iconSize="24dp"
            app:iconTint="@color/md_theme_primary"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"/>

</androidx.constraintlayout.widget.ConstraintLayout>